# rukinia

./: Cargo.toml  README.md  config.toml  rukina_0.1.0.bb  rukinia_0.1.0.bb
example/: rukinia.conf  test_htpp.conf
src/: lib.rs  main.rs
src/core/: configuration.rs  interactive_shell.rs  mod.rs  operator.rs  rukinia_result.rs  run_tasks.rs  save_test_result.rs  syntax.rs
src/tasks/: mod.rs  rukinia_cmd.rs  rukinia_false.rs  rukinia_group.rs  rukinia_http_request.rs  rukinia_kconf.rs  rukinia_kmod.rs  rukinia_kthread.rs  rukinia_netif_has_ip.rs  rukinia_network_is_up.rs  rukinia_symlink.rs  rukinia_true.rs  rukinia_user.rs  rukinia_user_memberof.rs  task.rs
src/tasks/bool/: mod.rs
src/tasks/filesystem/: mod.rs  rukinia_cmd.rs  rukinia_symlink.rs
src/tasks/kernel/: mod.rs  rukinia_kmod.rs
src/tasks/network/: mod.rs  rukinia_http_request.rs  rukinia_network_is_up.rs
src/tasks/user/: mod.rs  rukinia_group.rs  rukinia_user_memberof.rs
tests/: tests.rs
tests/tests-tasks/: rukinia_cmd.rs  rukinia_false.rs  rukinia_group.rs  rukinia_true.rs  rukinia_user.rs
