[package]
name = "rukinia"
version = "0.1.0"
authors = ["Valentin Boudevin <valentin.boudevin@gmail.com>"]
edition = "2021"

description = "Small tester for embedded linux system"
homepage = "https://github.com/ValentinBoudevin/rukinia.git"
repository = "https://github.com/ValentinBoudevin/rukinia.git"

[profile.release]
strip = true
opt-level = "z"     
lto = true 
codegen-units = 1
panic = "abort"

[dependencies]
regex="1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
nix = { version = "0.29", features = ["user","net"] }
tokio = { version = "1.44", features = ["rt-multi-thread"]}
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
csv = "1.3.1"
once_cell = "1.21.1"